# hypodoc-latex

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: beamer.md  c3-authoring.md  c5-cheatsheet.md  cover-layouts.md  developer.md  examples.md  figures.md  fonts.md  semantic-modules.md  themes.md  user-guide.md
docs/reference/: cli.md
docs/release/: handbook.md  quickstart.md
examples/showcase/: hypolatex-showcase.md
scripts/: prepare_private_corpus.py
scripts/release/: render_showcase_banner.sh
skill/: SKILL.md
skill/templates/: beamer.md  cheatsheet.md  longform.md  project.md  review.md
src/hypolatex/: __init__.py  build.py  cli.py  convert.py  diagnostics.py  doctor.py  document_options.py  pdf_evidence.py  resource_files.py  slides.py  themes.py
tests/: conftest.py  test_beamer_docs.py  test_build.py  test_c5_cheatsheet_docs.py  test_convert.py  test_cover_layouts.py  test_doctor.py  test_document_options.py  test_m1_full_book_compatibility.py  test_m4_primary_theme_pdf.py  test_pdf_evidence.py  test_private_corpus.py  test_private_review_questions.py  test_private_semantics.py  test_private_tables.py  test_release_docs_contract.py  test_release_hygiene_packaging.py  test_review_questions.py  test_semantics.py  test_showcase_readme_banner_contract.py  test_skill_docs.py  test_skill_docs_contract.py  test_skill_template.py  test_slides.py  test_table_dsl.py  test_theme_config.py  test_theme_matrix.py
tests/fixtures/beamer/: function-matrix.md  (+1 more)
themes/plain/: beamer.sty  longform.sty  tokens.yaml
(+61 files in other folders)
