[project]
name = "hypolatex"
version = "0.3.0"
description = "HypoDoc Markdown LaTeX/PDF renderer and CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
]

[project.scripts]
hypolatex = "hypolatex.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hypolatex"]

[tool.hatch.build.targets.wheel.force-include]
"tex/latex/hypolatex" = "hypolatex/tex/latex/hypolatex"
"themes/plain" = "hypolatex/themes/plain"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tex",
    "/themes",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/docs/release",
    "/pyproject.toml",
]
exclude = [
    "/tests/private/**",
    "/tests/private_corpus.toml",
    "/build",
    "/dist",
    "/.pytest_cache",
    "/**/__pycache__",
    "/**/*.pyc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
